# Rectangling-Pano-via-wrapping

./: CMakeLists.txt
include/: Common.h
src/: Common.cpp  main.cpp
